--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,9 @@ target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**
 !**/src/test/**
+Jenkinsfilev1
+Jenkinsfilev2
+/servers
 
 ### STS ###
 .apt_generated
