Added mode to deploy

--- a/deploy.yml
+++ b/deploy.yml
@@ -13,6 +13,7 @@
         repository_url: http://nexus:8081/repository/maven-snapshots/
         #dest: /var/jenkins_home/
         dest: /usr/local/tomcat/webapps/webblog.war
+        mode: 0755
 
     #- name: Copy Webblog WAR File to Tomcat
     #  copy:
