--- a/pom.xml
+++ b/pom.xml
@@ -97,7 +97,7 @@
 				<artifactId>tomcat7-maven-plugin</artifactId>
 				<version>2.2</version>
 				<configuration>
-					<url>http://${TOMCAT_HOST}/manager/text</url>
+					<url>http://tomcat:8080/manager/text</url>
 					<server>TomcatServer</server>
 					<username>tomcat</username>
 					<password>s3cret</password>
