--- a/pom.xml
+++ b/pom.xml
@@ -101,6 +101,7 @@
 					<server>TomcatServer</server>
 					<username>tomcat</username>
 					<password>s3cret</password>
+					<update>true</update>
 					<path>/webblog</path>
 				</configuration>
 			</plugin>
