Usage of new Jenkinsfile with metrics & monitoring, modified prometheus.yml

--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -23,7 +23,7 @@ scrape_configs:
     scrape_interval: 5s
     metrics_path: /prometheus
     static_configs:
-      - targets: ['servers_jenkins_1:8080']
+      - targets: ['jenkins:8080']
 
   - job_name: 'elasticsearch'
     scrape_interval: 10s
@@ -48,9 +48,9 @@ scrape_configs:
       username: admin
       password: admin
     static_configs:
-      - targets: ['servers_nexus_1:8081']
+      - targets: ['nexus:8081']
 
   - job_name: 'sonarqube'
     metrics_path: '/api/prometheus/metrics'
     static_configs:
-      - targets: ['servers_sonarqube_1:9000']
+      - targets: ['sonarqube:9000']
