--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
     image: prom/prometheus:v2.21.0
     container_name: prometheus
     volumes:
-      - ./prometheus:/etc/prometheus
+      - ./prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
       - prometheus_data:/prometheus
     command:
       - '--config.file=/etc/prometheus/prometheus.yml'
@@ -53,7 +53,7 @@ services:
     build: ./fluentd
     container_name: fluentd
     volumes:
-      - ./fluentd/conf:/fluentd/etc
+      - ./fluentd/conf/fluent.conf:/fluentd/etc/fluent.conf
     links:
       - "elasticsearch"
     ports:
