--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,8 @@ target/
 !**/src/test/**
 Jenkinsfilev1
 Jenkinsfilev2
-/servers
+servers/
+sonarqube/sonar-prometheus-exporter-1.0.0-SNAPSHOT.jar
 
 ### STS ###
 .apt_generated
