--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,10 +11,10 @@ volumes:
 
 services:
   prometheus:
-    image: prom/prometheus:v2.21.0
+    build: ./prometheus
     container_name: prometheus
     volumes:
-      - ./prometheus:/etc/prometheus
+    #  - ./prometheus:/etc/prometheus
       - prometheus_data:/prometheus
     command:
       - '--config.file=/etc/prometheus/prometheus.yml'
